# howy

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  config.toml  howy.config  howy.install
.opencode/workplan/: security-modes.json  security-modes.md
crates/howy-cli/: Cargo.toml
crates/howy-cli/src/: importer.rs  main.rs
crates/howy-cli/src/security/: command.rs  engine.rs  mod.rs  real.rs  real_tests.rs  tests.rs
crates/howy-common/: Cargo.toml  build.rs
crates/howy-common/src/: config.rs  credential.rs  env.rs  face.rs  ipc.rs  lib.rs  paths.rs  protocol.rs
crates/howy-common/src/provisioning/: mod.rs  tests.rs
crates/howy-common/src/storage/: codec.rs  contract_tests.rs  contracts.rs  crypto.rs  legacy.rs  mod.rs  namespace.rs  tests.rs
crates/howy-common/testdata/: provisioning-receipt-v1.golden.json
crates/howy-common/testdata/systemd-v261/: PROVENANCE.md  host-tpm2-hmac-zero-pcr.hex  host.hex  tpm2-hmac-zero-pcr.hex
crates/howy-config-bridge/: Cargo.toml
crates/howy-config-bridge/src/: lib.rs  main.rs  tests.rs
crates/howy-daemon/: Cargo.toml
crates/howy-daemon/src/: authorization.rs  camera.rs  child_spawn.rs  inference.rs  lib.rs  main.rs  mode1_key.rs  prompt_state.rs  server.rs
crates/howy-daemon/src/storage/: cache.rs  mod.rs  mode1.rs  plaintext.rs  readiness.rs
crates/howy-pam/: Cargo.toml
crates/howy-pam/src/: lib.rs
docs/: ENROLLMENT_DESIGN.md  ENROLLMENT_FUTURE_WORK.md  MIGRAPHX_DEPLOYMENT_NOTES.md
packaging/: 05-howy-config-stash.hook  config.bootstrap.toml
proto/: howy.proto
scripts/: download-models.sh  enroll.py  install-local.sh  uninstall-local.sh
scripts/tests/: install-local-mock.sh  package-alpm-matrix.sh  package-release-n.sh
systemd/: howy.service  howy.socket  pam_howy
sysusers.d/: howy.conf
tests/: camera_read_test.rs  camera_startup_bench.rs  capture_bench.rs  debug_scrfd.rs  real_face_test.rs  smoke_test.rs
tests/fixtures/: ort_profile_sanitized.json
