[workspace]
resolver = "2"
members = [
    "crates/howy-common",
    "crates/howy-daemon",
    "crates/howy-pam",
    "crates/howy-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0"
authors = ["howy contributors"]
description = "Linux face authentication daemon — a howdy replacement"

[workspace.dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"

# IPC (protobuf — pure Rust, statically linked, self-documenting wire format)
prost = "0.13"
prost-build = "0.13"

# Inference
ort = { version = "2.0.0-rc.10", default-features = false, features = [
    "ndarray", "std", "tracing", "copy-dylibs",
    "cuda", "tensorrt", "openvino", "migraphx",
] }
ndarray = "0.17"

# Image processing
image = "0.25"

# Camera
v4l = "0.14"
opencv = { version = "0.98", default-features = false, features = ["videoio", "imgproc", "clang-runtime"] }

# System
nix = { version = "0.29", features = ["user", "signal", "fs", "ioctl"] }
libc = "0.2"

# Async / daemon
tokio = { version = "1", features = ["full"] }

# Credential caching
linux-keyutils = "0.2"
