[package]
name = "howy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for managing howy face models"

[[bin]]
name = "howy"
path = "src/main.rs"

[dependencies]
howy-common = { path = "../howy-common" }

# CLI
clap = { version = "4", features = ["derive"] }

# Display
rpassword = "7"

# Serialization
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# System
libc = { workspace = true }
