[package]
name = "howy-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, IPC protocol, and configuration for howy"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
linux-keyutils = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
