[package]
name = "howy-config-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Descriptor-safe release-N Howy configuration bridge"

[dependencies]
howy-common = { path = "../howy-common" }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
